--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+.search-container{
+    position: relative;
+    display: inline;
+}
+.search-container .search-icon{
+    position: absolute;
+    padding: 2px 4px 2px 4px;
+    right: 0;
+}
+</style>
 
 <head>
     <title>Page Title</title>
@@ -7,8 +19,10 @@
 
 <body>
 
-    <h1>This is a Heading</h1>
-    <p>This is a paragraph.</p>
+    <div class="search-container">
+        <i class="fa fa-search search-icon"></i>
+        <input type="text">
+    </div>
 
 </body>
 
